src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Adequacy_of_current_project_controls__c</fullName>
        <label>Adequacy of current project controls</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Project_Mitigation_shortfall__c</fullName>
        <inlineHelpText>Record here any shortfalls in current mitigations. If a new mitigation/control is to be implemented add that to the Control tab and link it to the Risk it mitigates</inlineHelpText>
        <label>Current Project Mitigation shortfall</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Project_Mitigations_Sufficient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Owner reviews risk and Controls and determines if current risk level is acceptable</description>
        <inlineHelpText>Select Yes, or No. If No selected then complete the Comments section below</inlineHelpText>
        <label>Current Project Mitigations Sufficient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Plans_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Plans Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Project_Completed__c</fullName>
        <label>Percent Project Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Budget_used__c</fullName>
        <label>Percent of Budget used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <label>Project Budget</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Project ID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (as Owner)</relationshipLabel>
        <relationshipName>Projects_as_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Planned_End_Date__c</fullName>
        <label>Project Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reasons__c</fullName>
        <label>Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>IT Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>